# submissionAnalyzer

./: .env.example  .gitignore  README.md  SherlockContestAnalyzer.py  pyproject.toml  requirements.txt
submission_analyzer/: main.py  monitoring.py  utils.py
submission_analyzer/api/: code4rena_api.py  sherlock_api.py
submission_analyzer/connectors/: Code4rena.py
submission_analyzer/io/: cli.py
submission_analyzer/models/: code4rena_issue.py  sherlock_issue.py
submission_analyzer/notifiers/: telegram_notifier.py
